--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -288,7 +288,7 @@ AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game/Josh/AnimationsTest
-ContentBrowserTab1.SelectedPaths=/Game/b024899h/Particle_Effects/InvulnRune
+ContentBrowserTab1.SelectedPaths=/Game/AIAgent
 None=======
 SequenceBrowser.ActiveTypeFilters=
 SequenceBrowser.EnabledTypeFilters=
@@ -313,14 +313,11 @@ GlobalAssetPicker.ThumbnailSizeScale=0.100000
 GlobalAssetPicker.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/Levels/Demo
+LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
 
 [AssetEditorManager]
 CleanShutdown=True
 None=======
-OpenAssetsAtExit=/Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter
-OpenAssetsAtExit=/Game/AIAgent/BossAI.BossAI
-OpenAssetsAtExit=/Game/AIAgent/Proto_controller.Proto_controller
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -3568,9 +3565,9 @@ NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 AIbot_C=
 Character="\"Object.CharacterMovement\" \"Object.CharacterMovement\" "
-Character="\"Object.ActiveOnSpawn\" \"Object.ActiveOnSpawn\" "
+Character=
 Pawn="\"Object.CharacterMovement\" \"Object.CharacterMovement\" "
-Pawn="\"Object.ActiveOnSpawn\" \"Object.ActiveOnSpawn\" "
+Pawn=
 None=======
 None=======
 REINST_AIbot_C_315="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
@@ -3644,7 +3641,7 @@ Pause_Menu_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Obj
 Start_Menu_C=
 CoolDownComponent_C="\"Object.\" \"Object.\" "
 RangedAI_C=
-BaseAI_C="\"Object.ActiveOnSpawn\" \"Object.ActiveOnSpawn\" "
+BaseAI_C=
 KillZVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PhysicsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 BaseArmour_C="\"Object.ArmourStats\" \"Object.ArmourStats\" "
@@ -3697,7 +3694,7 @@ ParticleModuleLifetimeBase="\"Object.Lifetime.Lifetime\" \"Object.Lifetime.Lifet
 ParticleModule=
 ParticleModuleSpawn="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstList\" \"Object.Burst.BurstList.BurstList[0]\" \"Object.Burst.BurstScale\" \"Object.Burst.BurstScale.Distribution\" \"Object.Cascade.ModuleEditorColor\" "
 ParticleModuleSpawnBase="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstList\" \"Object.Burst.BurstList.BurstList[0]\" \"Object.Burst.BurstScale\" \"Object.Burst.BurstScale.Distribution\" \"Object.Cascade.ModuleEditorColor\" "
-BossAI_C="\"Object.ActiveOnSpawn\" \"Object.ActiveOnSpawn\" "
+BossAI_C=
 HoundEnemyAI_C="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 ChangeLevelActor_C=
 
@@ -4605,13 +4602,13 @@ PaintDensity=0.090000
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem1=/Game/b024899h/Particle_Effects/InvulnRune/InvulnPE
-MRUItem2=/Game/GW000979/DataStruct/Inventory
-MRUItem3=/Game/b024899h/Particle_Effects/SummoningPortal/SummonCircle3
-MRUItem4=/Game/Levels/Demo
-MRUItem5=/Game/AIAgent/Proto_controller
-MRUItem6=/Game/AIAgent/BossAI
+MRUItem0=/Game/AIAgent/BossAI
+MRUItem1=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem2=/Game/b024899h/Particle_Effects/InvulnRune/InvulnPE
+MRUItem3=/Game/GW000979/DataStruct/Inventory
+MRUItem4=/Game/b024899h/Particle_Effects/SummoningPortal/SummonCircle3
+MRUItem5=/Game/Levels/Demo
+MRUItem6=/Game/AIAgent/Proto_controller
 MRUItem7=/Game/TopDownBP/Blueprints/TopDownCharacter
 MRUItem8=/Game/Josh/Skinned_Player_Skeleton
 MRUItem9=/Game/EnemyAgent/CorruptedSlave
