--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -213,7 +213,7 @@ HUD_Proto_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCa
 PlayerControl_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 CoolDownComponent_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
 RangedAI_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
-BaseAI_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
+BaseAI_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,K2Node_VariableSet.DefaultValueCategory.None,
 BaseArmour_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,
 BaseAccessory_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 Calc Offence Stats=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
@@ -264,6 +264,8 @@ MovieSceneBindingOverrides=TopDownCharacter_C.Collision.Collision,StructProperty
 DefaultLevelSequenceInstanceData=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,K2Node_VariableSet.DefaultValueCategory.None,
 BossAI_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,K2Node_VariableSet.DefaultValueCategory.None,
 ChangeLevelActor_C=
+HoundEnemyAI_C=TopDownCharacter_C.Collision.Collision,StructProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,AIbot_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,TopDownCharacter_C.Physics.ConstraintsGroup,TopDownCharacter_C.Rendering.TextureStreaming,TopDownCharacter_C.Rendering.LOD,K2Node_VariableSet.DefaultValueCategory.None,
+HoundAnim_BP_C=
 
 [ContentBrowser]
 ContentBrowserTab1.SourcesExpanded=True
@@ -288,7 +290,7 @@ AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game/Josh/AnimationsTest
-ContentBrowserTab1.SelectedPaths=/Game/AIAgent
+ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Blueprints
 None=======
 SequenceBrowser.ActiveTypeFilters=
 SequenceBrowser.EnabledTypeFilters=
@@ -313,11 +315,14 @@ GlobalAssetPicker.ThumbnailSizeScale=0.100000
 GlobalAssetPicker.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
+LastLevel=/Game/Levels/Demo
 
 [AssetEditorManager]
 CleanShutdown=True
 None=======
+OpenAssetsAtExit=/Game/AIAgent/DerivedClasses/HoundEnemyAI.HoundEnemyAI
+OpenAssetsAtExit=/Game/EnemyAgent/CorruptedSlave.CorruptedSlave
+OpenAssetsAtExit=/Game/AIAgent/BaseAI.BaseAI
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -3351,6 +3356,25 @@ CorruptedSlave_C.Variable=True
 CorruptedSlave_C.Sockets=True
 CorruptedSlave_C.ComponentReplication=True
 CorruptedSlave_C.Events=True
+HoundAnim_BP_C.Default=True
+HoundAnim_BP_C.RootMotion=True
+REINST_HoundEnemyAI_C_227.Variable=True
+REINST_HoundEnemyAI_C_227.TransformCommon=True
+REINST_HoundEnemyAI_C_227.Sockets=True
+REINST_HoundEnemyAI_C_227.Animation=True
+REINST_HoundEnemyAI_C_227.Mesh=True
+REINST_HoundEnemyAI_C_227.Materials=True
+REINST_HoundEnemyAI_C_227.Clothing=True
+REINST_HoundEnemyAI_C_227.ClothingSimulation=True
+REINST_HoundEnemyAI_C_227.Physics=True
+REINST_HoundEnemyAI_C_227.Collision=True
+REINST_HoundEnemyAI_C_227.Lighting=True
+REINST_HoundEnemyAI_C_227.Rendering=True
+REINST_HoundEnemyAI_C_227.Tags=True
+REINST_HoundEnemyAI_C_227.ComponentReplication=True
+REINST_HoundEnemyAI_C_227.Activation=True
+REINST_HoundEnemyAI_C_227.Cooking=True
+REINST_HoundEnemyAI_C_227.Events=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=0
@@ -3545,6 +3569,8 @@ None=======
 /Game/b024899h/Particle_Effects/SummoningPortal/SummonCircle3.SummonCircle3=1
 /Game/GW000979/DataStruct/Inventory.Inventory=1
 /Game/b024899h/Particle_Effects/InvulnRune/InvulnPE.InvulnPE=1
+/Game/Josh/HoundFolder/Hound-Swipe_Montage.Hound-Swipe_Montage=0
+/Game/Josh/HoundFolder/HoundAnim_BP.HoundAnim_BP=0
 
 [PluginBrowser]
 InstalledPlugins=Substance
@@ -3584,7 +3610,7 @@ AIController="\"Object.Default.DebugColour\" "
 Controller="\"Object.Default.DebugColour\" "
 REINST_TestPawn_C_579="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 TopDownCharacter_C="\"Object.CharacterMovement\" \"Object.CharacterMovement\" "
-TopDownCharacter_C="\"Object.Current Weapon Equipped\" \"Object.Current Weapon Equipped\" "
+TopDownCharacter_C=
 REINST_TestPawn_C_585="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_TestPawn_C_603="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
 REINST_TestPawn_C_609="\"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
@@ -3660,7 +3686,7 @@ Calc Utlity Stats="\"Struct.Temp Speed\" "
 BlockingVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.FilmWhitePoint\" \"Object.PostProcessVolumeSettings.Settings.FilmShadowTint\" \"Object.PostProcessVolumeSettings.Settings.FilmChannelMixerRed\" \"Object.PostProcessVolumeSettings.Settings.FilmChannelMixerGreen\" \"Object.PostProcessVolumeSettings.Settings.FilmChannelMixerBlue\" \"Object.PostProcessVolumeSettings.Settings.SceneColorTint\" \"Object.PostProcessVolumeSettings.Settings.Bloom1Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom2Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom3Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom4Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom5Tint\" \"Object.PostProcessVolumeSettings.Settings.Bloom6Tint\" \"Object.PostProcessVolumeSettings.Settings.BloomDirtMaskTint\" \"Object.PostProcessVolumeSettings.Settings.AmbientCubemapTint\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTint\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[0]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[1]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[2]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[3]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[4]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[5]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[6]\" \"Object.PostProcessVolumeSettings.Settings.LensFlareTints.LensFlareTints[7]\" \"Object.PostProcessVolumeSettings.Settings.IndirectLightingColor\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables\" \"Object.PostProcessVolumeSettings.Settings.WeightedBlendables.Array\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 REINST_TopDownCharacter_C_236="\"Object.Character.Mesh.Object.Collision.BodyInstance\" "
-CorruptedSlave_C="\"Object.Mesh\" \"Object.Mesh\" "
+CorruptedSlave_C="\"Object.CurrentTarget\" \"Object.CurrentTarget\" "
 Inflict Status=
 Choose Status=
 StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" \"Object.StaticMesh.BodySetup.Object.DefaultInstance\" \"Object.ImportSettings.AssetImportData\" \"Object.ImportSettings.AssetImportData.Object.Mesh\" \"Object.ImportSettings.AssetImportData.Object.Transform\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" \"Object.ImportSettings.AssetImportData.Object.Miscellaneous\" \"Object.ImportSettings.AssetImportData.Object.File Path\" "
@@ -3695,8 +3721,9 @@ ParticleModule=
 ParticleModuleSpawn="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstList\" \"Object.Burst.BurstList.BurstList[0]\" \"Object.Burst.BurstScale\" \"Object.Burst.BurstScale.Distribution\" \"Object.Cascade.ModuleEditorColor\" "
 ParticleModuleSpawnBase="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstList\" \"Object.Burst.BurstList.BurstList[0]\" \"Object.Burst.BurstScale\" \"Object.Burst.BurstScale.Distribution\" \"Object.Cascade.ModuleEditorColor\" "
 BossAI_C=
-HoundEnemyAI_C="\"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" "
+HoundEnemyAI_C=
 ChangeLevelActor_C=
+HoundAnim_BP_C=
 
 [DetailCategoriesAdvanced]
 TopDownCharacter_C.Collision=True
@@ -4414,11 +4441,11 @@ SequencerWidgets.TimeStamp=2018.09.21-08.05.22
 SequencerWidgets.LastCompileMethod=External
 StaticMeshEditor.TimeStamp=2018.09.20-07.56.19
 StaticMeshEditor.LastCompileMethod=Unknown
-AnimationEditor.TimeStamp=2018.09.20-07.56.05
-AnimationEditor.LastCompileMethod=Unknown
+AnimationEditor.TimeStamp=2018.12.14-12.01.13
+AnimationEditor.LastCompileMethod=External
 None=======
-AnimationBlueprintEditor.TimeStamp=2018.09.20-07.56.05
-AnimationBlueprintEditor.LastCompileMethod=Unknown
+AnimationBlueprintEditor.TimeStamp=2018.12.14-12.01.13
+AnimationBlueprintEditor.LastCompileMethod=External
 PhysicsAssetEditor.TimeStamp=2018.09.20-07.56.16
 PhysicsAssetEditor.LastCompileMethod=Unknown
 ApexDestruction.TimeStamp=2018.12.14-12.14.12
@@ -4528,8 +4555,8 @@ LastLogListing=PIE
 /Game/Widgets=(R=0.500000,G=0.000000,B=0.386934,A=1.000000)
 
 [PlacementMode]
-RecentlyPlaced=/Game/b024899h/Particle_Effects/InvulnRune/InvulnPE.InvulnPE;
 RecentlyPlaced=/Game/AIAgent/DerivedClasses/HoundEnemyAI.HoundEnemyAI;
+RecentlyPlaced=/Game/b024899h/Particle_Effects/InvulnRune/InvulnPE.InvulnPE;
 RecentlyPlaced=/Game/AIAgent/CrystalHound.CrystalHound;
 RecentlyPlaced=/Game/EnemyAgent/CorruptedSlave.CorruptedSlave;
 RecentlyPlaced=/Game/Levels/LevelTransitions/ChangeLevelActor.ChangeLevelActor;
@@ -4602,26 +4629,26 @@ PaintDensity=0.090000
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/AIAgent/BossAI
-MRUItem1=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem2=/Game/b024899h/Particle_Effects/InvulnRune/InvulnPE
-MRUItem3=/Game/GW000979/DataStruct/Inventory
-MRUItem4=/Game/b024899h/Particle_Effects/SummoningPortal/SummonCircle3
-MRUItem5=/Game/Levels/Demo
-MRUItem6=/Game/AIAgent/Proto_controller
-MRUItem7=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem8=/Game/Josh/Skinned_Player_Skeleton
-MRUItem9=/Game/EnemyAgent/CorruptedSlave
-MRUItem10=/Game/AIAgent/CrystalHound
-MRUItem11=/Game/Levels/LevelTransitions/ChangeLevelActor
-MRUItem12=/Game/Levels/Area2-MarketMeshStart
-MRUItem13=/Game/Levels/MainMenu
-MRUItem14=/Game/Models/weapons/shortsword
-MRUItem15=/Game/Models/weapons/crystal_sword
-MRUItem16=/Game/GW000979/DataStruct/DataTables/WeaponDataTable
-MRUItem17=/Game/GW000979/DataStruct/BaseEquipment/BaseWeapon
-MRUItem18=/Game/Levels/Area1-Rework
-MRUItem19=/Game/Sequence_1
+MRUItem0=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem1=/Game/Josh/HoundFolder/HoundIdleRun_BS
+MRUItem2=/Game/Josh/HoundFolder/HoundAnim_BP
+MRUItem3=/Game/AIAgent/DerivedClasses/HoundEnemyAI
+MRUItem4=/Game/AIAgent/BaseAI
+MRUItem5=/Game/EnemyAgent/CorruptedSlave
+MRUItem6=/Game/Levels/Demo
+MRUItem7=/Game/AIAgent/BossAI
+MRUItem8=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem9=/Game/b024899h/Particle_Effects/InvulnRune/InvulnPE
+MRUItem10=/Game/GW000979/DataStruct/Inventory
+MRUItem11=/Game/b024899h/Particle_Effects/SummoningPortal/SummonCircle3
+MRUItem12=/Game/AIAgent/Proto_controller
+MRUItem13=/Game/Josh/Skinned_Player_Skeleton
+MRUItem14=/Game/AIAgent/CrystalHound
+MRUItem15=/Game/Levels/LevelTransitions/ChangeLevelActor
+MRUItem16=/Game/Levels/Area2-MarketMeshStart
+MRUItem17=/Game/Levels/MainMenu
+MRUItem18=/Game/Models/weapons/shortsword
+MRUItem19=/Game/Models/weapons/crystal_sword
 
 [WidgetTemplatesExpanded]
 Extra=False
