--- a/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SP_Prototype/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -104,13 +104,13 @@ CurrentRotGridSize=0
 CurrentPosGridSize=0
 
 [MRU]
-MRUItem0=/Game/Levels/Demo
-MRUItem1=/Game/Levels/Area2-MarketMeshStart
-MRUItem2=/Game/Levels/MainMenu
-MRUItem3=/Game/Levels/Area1-Rework
-MRUItem4=/Game/Levels/Area2-Market
-MRUItem5=/Game/Levels/texturedzoo
-MRUItem6=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem0=/Game/Levels/Area2-MarketMeshStart
+MRUItem1=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem2=/Game/Levels/Demo
+MRUItem3=/Game/Levels/MainMenu
+MRUItem4=/Game/Levels/Area1-Rework
+MRUItem5=/Game/Levels/Area2-Market
+MRUItem6=/Game/Levels/texturedzoo
 MRUItem7=/Game/b024899h/ParticleEffectsTest
 MRUItem8=/Game/Levels/MechanicsLevel
 MRUItem9=/Game/Chloe/UI/Main_Menu_level/Main_Menu
@@ -290,7 +290,7 @@ AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SelectedPaths=/Game/Josh/AnimationsTest
-ContentBrowserTab1.SelectedPaths=/Game/TopDownBP/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/Levels
 None=======
 SequenceBrowser.ActiveTypeFilters=
 SequenceBrowser.EnabledTypeFilters=
@@ -315,14 +315,11 @@ GlobalAssetPicker.ThumbnailSizeScale=0.100000
 GlobalAssetPicker.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/Levels/Demo
+LastLevel=/Game/Levels/Area2-MarketMeshStart
 
 [AssetEditorManager]
 CleanShutdown=True
 None=======
-OpenAssetsAtExit=/Game/AIAgent/DerivedClasses/HoundEnemyAI.HoundEnemyAI
-OpenAssetsAtExit=/Game/EnemyAgent/CorruptedSlave.CorruptedSlave
-OpenAssetsAtExit=/Game/AIAgent/BaseAI.BaseAI
 
 [DetailCategories]
 TopDownCharacter_C.TransformCommon=True
@@ -3375,6 +3372,10 @@ REINST_HoundEnemyAI_C_227.ComponentReplication=True
 REINST_HoundEnemyAI_C_227.Activation=True
 REINST_HoundEnemyAI_C_227.Cooking=True
 REINST_HoundEnemyAI_C_227.Events=True
+MainMenuMode_C.Tick=True
+MainMenuMode_C.Classes=True
+MainMenuMode_C.Game=True
+MainMenuMode_C.GameMode=True
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDownBP/Blueprints/TopDownGameMode.TopDownGameMode=0
@@ -3571,6 +3572,8 @@ None=======
 /Game/b024899h/Particle_Effects/InvulnRune/InvulnPE.InvulnPE=1
 /Game/Josh/HoundFolder/Hound-Swipe_Montage.Hound-Swipe_Montage=0
 /Game/Josh/HoundFolder/HoundAnim_BP.HoundAnim_BP=0
+/Game/TopDownBP/Blueprints/MainMenuMode.MainMenuMode=1
+/Game/AIAgent/WayPoint/BaseAI.BaseAI=0
 
 [PluginBrowser]
 InstalledPlugins=Substance
@@ -4629,26 +4632,26 @@ PaintDensity=0.090000
 PreserveScaleRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/TopDownBP/Blueprints/TopDownCharacter
-MRUItem1=/Game/Josh/HoundFolder/HoundIdleRun_BS
-MRUItem2=/Game/Josh/HoundFolder/HoundAnim_BP
-MRUItem3=/Game/AIAgent/DerivedClasses/HoundEnemyAI
+MRUItem0=/Game/Levels/Area2-MarketMeshStart
+MRUItem1=/Game/TopDownBP/Blueprints/TopDownCharacter
+MRUItem2=/Game/TopDownBP/Blueprints/MainMenuMode
+MRUItem3=/Game/TopDownBP/Blueprints/TopDownGameMode
 MRUItem4=/Game/AIAgent/BaseAI
-MRUItem5=/Game/EnemyAgent/CorruptedSlave
-MRUItem6=/Game/Levels/Demo
-MRUItem7=/Game/AIAgent/BossAI
-MRUItem8=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem9=/Game/b024899h/Particle_Effects/InvulnRune/InvulnPE
-MRUItem10=/Game/GW000979/DataStruct/Inventory
-MRUItem11=/Game/b024899h/Particle_Effects/SummoningPortal/SummonCircle3
-MRUItem12=/Game/AIAgent/Proto_controller
-MRUItem13=/Game/Josh/Skinned_Player_Skeleton
-MRUItem14=/Game/AIAgent/CrystalHound
-MRUItem15=/Game/Levels/LevelTransitions/ChangeLevelActor
-MRUItem16=/Game/Levels/Area2-MarketMeshStart
-MRUItem17=/Game/Levels/MainMenu
-MRUItem18=/Game/Models/weapons/shortsword
-MRUItem19=/Game/Models/weapons/crystal_sword
+MRUItem5=/Game/Josh/HoundFolder/HoundIdleRun_BS
+MRUItem6=/Game/Josh/HoundFolder/HoundAnim_BP
+MRUItem7=/Game/AIAgent/DerivedClasses/HoundEnemyAI
+MRUItem8=/Game/EnemyAgent/CorruptedSlave
+MRUItem9=/Game/Levels/Demo
+MRUItem10=/Game/AIAgent/BossAI
+MRUItem11=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem12=/Game/b024899h/Particle_Effects/InvulnRune/InvulnPE
+MRUItem13=/Game/GW000979/DataStruct/Inventory
+MRUItem14=/Game/b024899h/Particle_Effects/SummoningPortal/SummonCircle3
+MRUItem15=/Game/AIAgent/Proto_controller
+MRUItem16=/Game/Josh/Skinned_Player_Skeleton
+MRUItem17=/Game/AIAgent/CrystalHound
+MRUItem18=/Game/Levels/LevelTransitions/ChangeLevelActor
+MRUItem19=/Game/Levels/MainMenu
 
 [WidgetTemplatesExpanded]
 Extra=False
